fix band images on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,14 @@ a {
 
     #band-members {
         width: 100%;
+        .band-row {
+            display: block;
+            margin: auto;
+            text-align: center;
+            .band-img {
+                height: 100px;
+            }
+        }
     }
 
     .footer-container {
